tests/conformance/errors/truthiness.ur
rakho x = 5;
agar (x) { bolo "kabhi nahi"; }
